fixed body overflow

--- a/views/css/mainalt.css
+++ b/views/css/mainalt.css
@@ -4,7 +4,7 @@
 body {
   left: 0;
   margin: 0;
-  overflow: hidden;
+  overflow: auto;
   position: relative;
   background-color: #ffe7cb;
 }
@@ -117,7 +117,7 @@ body {
 
 .learn-more {
   background-color: #ffe7cb;
-  height: 500px;
+  height: 100px;
 }
 
 .learn-more h3 {
